# burgess-principle

./: .aider.conf.yml  .clinerules  .coverage  .gitignore  .windsurfrules  377-YEAR-LOOP-HISTORICAL-CONTEXT.md  ADOPTION.md  AGENT.md  AGENTS.md  ARCHITECTURE.md  CASE_STUDY_PASSPORT.md  CASE_STUDY_WAVE.md  CERTIFIED_PRACTITIONERS.md  CHANGELOG.md  CHOOSE_YOUR_PATH.md  CIVIL-DISOBEDIENCE-COMPARISON.md  CLAUDE.md  CONNECTIVITY_MODE.md  CONTRIBUTING.md  CONTRIBUTING_AI_DOCS.md  DEVELOPER_MANIFEST.md  DISCLAIMER.md  ECOSYSTEM.md  EXTENSION_PACKS.md  FAQ.md  FIRST_SIGNAL.md  FOR_AI_MODELS.md  FOUNDING.md  GIT_AS_GOVERNANCE.md  GROK_DIRECTIVE.md  INSTITUTIONAL_REGISTER.md  INTEGRATIONS.md  INTEGRATION_CONTRACT.md  LICENSE.md  LINEAGE.md  LIVE_AUDIT_LOG.md  MEDICAL_DEVICE_DOCTRINE.md  ORIGIN.md  PARTNERSHIP_LEDGER.md  README.md  (+35 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
api/: chat.cover  chat.py  push-subscribe.py
case-studies/: CASE_STUDY_CREDIT_FILE.md  CASE_STUDY_EHRC.md  CASE_STUDY_EON.md  CASE_STUDY_EQUITA.md  CASE_STUDY_LOWELL.md  CASE_STUDY_PASSPORT.md  CASE_STUDY_TEMPLATE.md  CASE_STUDY_TVL.md  CASE_STUDY_WAVE.md  EON-Precedent.md  Equita-Multiple-Nullity-20Mar2026.md  README.md  colonial-charter-passport-nullity.md
docs/: AGENT_90_DAY_PLAN.md
governance/: APPLE_ALLIANCE.md  LICENSING_MODEL.md  OPENCLAW_MANDATE.md  SOVEREIGN_NODE.md
iris/: README.md  __init__.cover  __init__.py  claim_builder.cover  claim_builder.py  sovereign_profile.cover  sovereign_profile.py  system-prompt.md
litigation/: CONTAMINATION_CHAIN_MAPPER.md  (+4 more)
(+200 files in other folders)
